* moved synonym replacement to its own folder

--- a/sentence-statistics.ipynb
+++ b/sentence-statistics.ipynb
@@ -24,6 +24,7 @@
     "from SPARQLWrapper import SPARQLWrapper, JSON\n",
     "import utils\n",
     "\n",
+    "# TODO https://blog.dominodatalab.com/interactive-dashboards-in-jupyter/\n",
     "# TODO: caching\n",
     "sparql = SPARQLWrapper(\"https://innovonto-core.imp.fu-berlin.de/management/core/query\")\n",
     "sparql.setQuery(\"\"\"\n",
