--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -217,7 +217,12 @@
    "source": [
     "# Sentence Embeddings\n",
     "1) Pretrained USE.v5 with a Transformer encoder\n",
-    "2) ELMO\n"
+    "\n",
+    "2) ELMO\n",
+    "\n",
+    "3) TODO BERT via SpaCy\n",
+    "\n",
+    "TODO https://medium.com/better-programming/the-beginners-guide-to-similarity-matching-using-spacy-782fc2922f7c\n"
    ]
   },
   {
@@ -1179,9 +1184,178 @@
     "# wordnet object link spacy token with nltk wordnet interface by giving acces to\n",
     "# synsets and lemmas \n",
     "#print(token._.wordnet.synsets())\n",
-    "#print(token._.wordnet.lemmas())\n",
-    "\n"
+    "#print(token._.wordnet.lemmas())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# LEARNING SPACY"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "from spacy import displacy\n",
+    "import en_core_web_lg\n",
+    "nlp = en_core_web_lg.load()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "This technology could be used to map a patient's recovery from severe disfigurement or burns and help show consistent patterns in rehabilitation. It can help pinpoint tiny variances in their movement that showcase limb and structural regrowth or rebrand and help a Doctor see how fast they are recovering.\n",
+      "This technology technology nsubjpass used\n",
+      "a patient's recovery recovery dobj map\n",
+      "severe disfigurement disfigurement pobj from\n",
+      "burns burns conj disfigurement\n",
+      "consistent patterns patterns dobj show\n",
+      "rehabilitation rehabilitation pobj in\n",
+      "It It nsubj help\n",
+      "tiny variances variances dobj pinpoint\n",
+      "their movement movement pobj in\n",
+      "limb limb dobj showcase\n",
+      "structural regrowth regrowth conj limb\n",
+      "a Doctor Doctor nsubj see\n",
+      "they they nsubj recovering\n",
+      "This DET det\n",
+      "technology NOUN nsubjpass\n",
+      "could VERB aux\n",
+      "be AUX auxpass\n",
+      "used VERB ROOT\n",
+      "to PART aux\n",
+      "map VERB xcomp\n",
+      "a DET det\n",
+      "patient NOUN poss\n",
+      "'s PART case\n",
+      "recovery NOUN dobj\n",
+      "from ADP prep\n",
+      "severe ADJ amod\n",
+      "disfigurement NOUN pobj\n",
+      "or CCONJ cc\n",
+      "burns NOUN conj\n",
+      "and CCONJ cc\n",
+      "help VERB conj\n",
+      "show VERB xcomp\n",
+      "consistent ADJ amod\n",
+      "patterns NOUN dobj\n",
+      "in ADP prep\n",
+      "rehabilitation NOUN pobj\n",
+      ". PUNCT punct\n",
+      "It PRON nsubj\n",
+      "can VERB aux\n",
+      "help VERB ROOT\n",
+      "pinpoint VERB xcomp\n",
+      "tiny ADJ amod\n",
+      "variances NOUN dobj\n",
+      "in ADP prep\n",
+      "their DET poss\n",
+      "movement NOUN pobj\n",
+      "that DET nsubj\n",
+      "showcase VERB relcl\n",
+      "limb NOUN dobj\n",
+      "and CCONJ cc\n",
+      "structural ADJ amod\n",
+      "regrowth NOUN conj\n",
+      "or CCONJ cc\n",
+      "rebrand VERB conj\n",
+      "and CCONJ cc\n",
+      "help VERB conj\n",
+      "a DET det\n",
+      "Doctor NOUN nsubj\n",
+      "see VERB ccomp\n",
+      "how ADV advmod\n",
+      "fast ADV advmod\n",
+      "they PRON nsubj\n",
+      "are AUX aux\n",
+      "recovering VERB ccomp\n",
+      ". PUNCT punct\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "doc = nlp(\"This technology could be used to map a patient's recovery from severe disfigurement or burns and help show consistent patterns in rehabilitation. It can help pinpoint tiny variances in their movement that showcase limb and structural regrowth or rebrand and help a Doctor see how fast they are recovering.\")\n",
+    "print(doc)\n",
+    "\n",
+    "for chunk in doc.noun_chunks:\n",
+    "    print(chunk.text, chunk.root.text, chunk.root.dep_,\n",
+    "            chunk.root.head.text)\n",
+    "    \n",
+    "for token in doc:\n",
+    "    print(token.text, token.pos_, token.dep_)\n",
+    "    #  print(spacy.explain(token.pos_))\n",
+    "    #print(spacy.explain(token.dep_))\n",
+    "\n",
+    "#for word in doc:\n",
+    "#    if word.dep_ in ('xcomp', 'ccomp'):\n",
+    "#        print(''.join(w.text_with_ws for w in word.subtree))\n",
+    "\n",
+    "#for ent in doc.ents:\n",
+    "#    print(ent.text, ent.start_char, ent.end_char, ent.label_)\n",
+    "\n",
+    "#print('Dependency Labels:')\n",
+    "#options = {\"compact\": True}\n",
+    "#displacy.render(doc, style=\"ent\",options=options)\n",
+    "dep_labels = []\n",
+    "for token in doc:\n",
+    "    while token.head != token:\n",
+    "        dep_labels.append(token.dep_)\n",
+    "        token = token.head\n",
+    "#print(dep_labels)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -1869,6 +2043,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
